kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: w3id-staging-proxy
  name: w3id-staging-proxy
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: w3id-staging-proxy
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
